dhall/tests/type-inference/failure/unit/OperatorTextConcatenateLhsNotText.txt
Type error: error: BinOpTypeMismatch
 --> <current file>:1:0
  |
1 | 1 ++ ""
  | ^^^^^^^ BinOpTypeMismatch
  |
